yeet card layout, fix float overflow

--- a/www/style.css
+++ b/www/style.css
@@ -19,15 +19,16 @@ body {
     --footer-color: rgb(114, 147, 180);
     --footer-font-color: black;
     --footer-shadow: #ffffff80;
+    --min-margin: 3vw;
     /* column layout should be as wide as the narrowest axis */
     /* for virtical screens, this is 0. For horizontal ones, it gives a centering effect */
-    --column-margin: min(15vw, calc((100vw - 100vmin)/2));
+    --column-padding: max(var(--min-margin), min(15vw, calc((100vw - 100vmin)/2)));
 }
 /* Add a document-uniform padding to the left and right to make a column content area down the center */
 .columnify {
     /* padding is used to ensure backgroun stretches correctly */
-    padding-left: var(--column-margin);
-    padding-right: var(--column-margin);
+    padding-left: var(--column-padding);
+    padding-right: var(--column-padding);
 }
 #bigheader::before {
     content :"";
@@ -84,7 +85,7 @@ body {
 }
 #bigwords .pronouns {
     /* don't wrap this text, just move it all to the newline if need be! */
-    display: block;
+    display: inline-block;
     font-style: italic;
     font-weight: lighter;
     font-size: 0.5em;
@@ -214,26 +215,16 @@ h2, h3 {
     width: 100%;
     text-align: left;
     padding-bottom: 0.5em;
+}
+h2 {
+    border-bottom: 1px solid var(--body-text-color);
+}
+h3 {
     border-bottom: 1px dashed var(--body-text-color);
 }
 main > section {
     scroll-padding-top: 10vh;
     scroll-margin-top: 10vh;
-}
-section >section:nth-of-type(odd) {
-    background-color: var(--alt-color-2);
-}
-section >section:nth-of-type(even) {
-    background-color: var(--alt-color-1);
-}
-.cardsection > .card {
-    margin: 10px;
-    padding: 1vmin;
-    height: fit-content;
-    border-radius: 10px;
-    box-shadow:
-        inset -5px -5px rgba(0.0, 0.0, 0.0, 0.5),
-        5px 5px rgba(0.0, 0.0, 0.0, 0.5);
 }
 time {
     font-weight: lighter;
@@ -250,17 +241,20 @@ main a:hover {
     color: var(--body-text-color);
     text-decoration-style: dashed;
 }
-.card:nth-of-type(4n+1) .project-link, .card:nth-of-type(4n+0) .project-link{
-    float: right;
-}
-.card:nth-of-type(4n+2) .project-link, .card:nth-of-type(4n+3) .project-link {
-    float: left;
-}
-.card img {
-    max-width: 35vw;
-}
 figure {
-    margin: 5vw 5vw 0;
+    margin: 0;
+    padding: 0
+}
+figure img {
+    width: 100%;
+}
+.project-link {
+    width: min(100vw, 20vh);
+    margin-left: var(--min-margin);
+    margin-right: var(--min-margin);
+    margin-bottom: var(--min-margin);
+    display: block;
+    float: left;
 }
 figcaption {
     display: flex;
@@ -269,11 +263,16 @@ figcaption {
     text-align: center;
     width: 100%;
 }
+figcaption * {
+    padding-left: 5px;
+    padding-right: 5px;
+}
 figcaption span, figcaption::before, figcaption::after {
     content: "";
     display: block;
 }
 figcaption::before, figcaption::after {
+    /* add a thin white line around caption text */
     flex-grow: 1;
     height: 1px;
     flex-basis: 0;
@@ -285,38 +284,12 @@ a:hover figcaption::before, a:hover figcaption::after {
     background-image: repeating-linear-gradient(to right, var(--body-text-color) 0px, var(--body-text-color) 5px, #0000 5px, #0000 8px);
     background-size: 8px;
 }
-.card .summary {
+.summary {
     text-align: left;
-    float: none;
     text-indent: 15px;
 }
-/* === 2-wide grid on landscape, vertical list on mobile ===*/
-@media screen and (orientation: landscape) {
-    .card img {
-        max-width: 20vw;
-    }
-    figure {
-        margin: revert;
-    }
-    .cardsection > h2 {
-        grid-row: 1;
-        grid-column: 1 / 3;
-    }
-    .cardsection {
-        display: grid;
-        grid-template-columns: 50% 50%;
-    }
-    .card.thissite {
-        grid-column: 1 / 3;
-        max-width: 1000px;
-        margin: 0 auto;
-    }
-    section >section:nth-of-type(4n+1), section >section:nth-of-type(4n+0) {
-        background-color: var(--alt-color-2);
-    }
-    section >section:nth-of-type(4n+2), section >section:nth-of-type(4n+3) {
-        background-color: var(--alt-color-1);
-    }
+section {
+    clear: both;
 }
 section h2 {
     text-shadow: 2px 2px rgba(0.0, 0.0, 0.0, 0.2);
